Base import of Tycho code (warning: huge commit)