@@ -4,18 +4,23 @@
 
 package org.mozilla.goanna.util;
 
+import android.content.Context;
+import org.mozilla.goanna.AppConstants;
 import org.mozilla.goanna.mozglue.NativeZip;
 
 import android.content.res.Resources;
 import android.graphics.Bitmap;
 import android.graphics.drawable.BitmapDrawable;
 import android.util.Log;
+import org.mozilla.goanna.mozglue.RobocopTarget;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Stack;
 
 /* Reads out of a multiple level deep jar file such as
@@ -44,7 +49,7 @@ public final class GoannaJarReader {
             if (inputStream != null) {
                 bitmap = new BitmapDrawable(resources, inputStream);
             }
-        } catch (IOException ex) {
+        } catch (IOException | URISyntaxException ex) {
             Log.e(LOGTAG, "Exception ", ex);
         } finally {
             if (inputStream != null) {
@@ -75,7 +80,7 @@ public final class GoannaJarReader {
                 reader = new BufferedReader(new InputStreamReader(input));
                 text = reader.readLine();
             }
-        } catch (IOException ex) {
+        } catch (IOException | URISyntaxException ex) {
             Log.e(LOGTAG, "Exception ", ex);
         } finally {
             if (reader != null) {
@@ -93,12 +98,12 @@ public final class GoannaJarReader {
         return text;
     }
 
-    private static NativeZip getZipFile(String url) throws IOException {
-        URL fileUrl = new URL(url);
+    private static NativeZip getZipFile(String url) throws IOException, URISyntaxException {
+        URI fileUrl = new URI(url);
         return new NativeZip(fileUrl.getPath());
     }
 
-    // Public for testing only.
+    @RobocopTarget
     public static InputStream getStream(String url) {
         Stack<String> jarUrls = parseUrl(url);
         try {
@@ -108,6 +113,7 @@ public final class GoannaJarReader {
             // Some JNI code throws IllegalArgumentException on a bad file name;
             // swallow the error and return null.  We could also see legitimate
             // IOExceptions here.
+            Log.e(LOGTAG, "Exception getting input stream from jar URL: " + url, ex);
             return null;
         }
     }
@@ -167,5 +173,24 @@ public final class GoannaJarReader {
             results.push(url);
             return results;
         }
+    }
+
+    public static String getJarURL(Context context, String pathInsideJAR) {
+        // We need to encode the package resource path, because it might contain illegal characters. For example:
+        //   /mnt/asec2/[2]org.mozilla.fennec-1/pkg.apk
+        // The round-trip through a URI does this for us.
+        final String resourcePath = context.getPackageResourcePath();
+        return computeJarURI(resourcePath, pathInsideJAR);
+    }
+
+    /**
+     * Encodes its resource path correctly.
+     */
+    @RobocopTarget
+    public static String computeJarURI(String resourcePath, String pathInsideJAR) {
+        final String resURI = new File(resourcePath).toURI().toString();
+
+        // TODO: do we need to encode the file path, too?
+        return "jar:jar:" + resURI + "!/" + AppConstants.OMNIJAR_NAME + "!/" + pathInsideJAR;
     }
 }
